crates/toml/tests/snapshots/invalid/array/no-close-03.stderr
TOML parse error at line 1, column 22
  |
1 | no-close-03 = [42 #]
  |                      ^
unclosed array, expected `]`
